--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "cra-template": "1.3.0",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
+        "react-lottie": "^1.2.10",
         "react-scripts": "5.0.1",
         "web-vitals": "^4.2.4"
     },
@@ -17,7 +18,8 @@
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "format": "prettier --write .",
-        "prepare": "husky install"
+        "prepare": "husky install",
+        "sass": "sass input.scss output.css"
     },
     "eslintConfig": {
         "extends": [
@@ -40,6 +42,8 @@
     "devDependencies": {
         "husky": "^9.1.7",
         "lint-staged": "^15.5.0",
-        "prettier": "^3.5.3"
+        "lottie-react": "^2.4.1",
+        "prettier": "^3.5.3",
+        "sass": "^1.86.3"
     }
 }
